Syzygy integration test